--- a/package.json
+++ b/package.json
@@ -7,26 +7,38 @@
   },
 
   "dependencies": {
-    "@angular/common": "4.1.3",
-    "@angular/compiler": "4.1.3",
-    "@angular/core": "4.1.3",
-    "@angular/forms": "4.1.3",
-    "@angular/http": "4.1.3",
-    "@angular/platform-browser": "4.1.3",
-    "@angular/platform-browser-dynamic": "4.1.3",
-    "@angular/router": "4.1.3",
-    "@angular/upgrade": "4.1.3",
-    "core-js": "2.4.1",
-    "reflect-metadata": "0.1.10",
-    "rxjs": "5.4.0",
-    "systemjs": "0.20.13",
-    "zone.js": "0.8.11"
+    "@angular/animations": "^4.1.3",
+    "@angular/common": "^4.1.3",
+    "@angular/compiler": "^4.1.3",
+    "@angular/core": "^4.1.3",
+    "@angular/forms": "^4.1.3",
+    "@angular/http": "^4.1.3",
+    "@angular/platform-browser": "^4.1.3",
+    "@angular/platform-browser-dynamic": "^4.1.3",
+    "@angular/router": "^4.1.3",
+    "core-js": "^2.4.1",
+    "rxjs": "^5.4.0",
+    "zone.js": "^0.8.11"
   },
+
   "devDependencies": {
-    "@types/core-js": "0.9.41",
-    "@types/node": "7.0.23",
-    "concurrently": "3.4.0",
-    "typescript": "2.3.4",
-    "electron": "1.6.10"
+    "@angular/cli": "1.1.0",
+    "@angular/compiler-cli": "^4.1.3",
+    "@angular/language-service": "^4.1.3",
+    "@types/jasmine": "2.5.48",
+    "@types/node": "~7.0.23",
+    "codelyzer": "~3.0.1",
+    "jasmine-core": "~2.6.2",
+    "jasmine-spec-reporter": "~4.1.0",
+    "karma": "~1.7.0",
+    "karma-chrome-launcher": "~2.1.1",
+    "karma-cli": "~1.0.1",
+    "karma-jasmine": "~1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-coverage-istanbul-reporter": "^1.3.0",
+    "protractor": "~5.1.2",
+    "ts-node": "~3.0.4",
+    "tslint": "~5.4.0",
+    "typescript": "~2.3.4"
   }
 }
