--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "scripts": {
     "start": "electron ."
   },
-
   "dependencies": {
     "@angular/animations": "^4.1.3",
     "@angular/common": "^4.1.3",
@@ -16,11 +15,24 @@
     "@angular/platform-browser": "^4.1.3",
     "@angular/platform-browser-dynamic": "^4.1.3",
     "@angular/router": "^4.1.3",
+    "@progress/kendo-angular-charts": "*",
+    "@progress/kendo-angular-dateinputs": "^1.0.3",
+    "@progress/kendo-angular-dropdowns": "^1.0.10",
+    "@progress/kendo-angular-excel-export": "^1.0.1",
+    "@progress/kendo-angular-grid": "^1.1.3",
+    "@progress/kendo-angular-inputs": "^1.0.4",
+    "@progress/kendo-angular-intl": "^1.1.0",
+    "@progress/kendo-angular-l10n": "^1.0.0",
+    "@progress/kendo-angular-resize-sensor": "*",
+    "@progress/kendo-angular-upload": "*",
+    "@progress/kendo-data-query": "^1.0.2",
+    "@progress/kendo-drawing": "^1.0.3",
+    "@progress/kendo-file-saver": "*",
+    "@progress/kendo-theme-default": "*",
     "core-js": "^2.4.1",
     "rxjs": "^5.4.0",
     "zone.js": "^0.8.11"
   },
-
   "devDependencies": {
     "@angular/cli": "1.1.0",
     "@angular/compiler-cli": "^4.1.3",
