--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/platform-browser": "^4.1.3",
     "@angular/platform-browser-dynamic": "^4.1.3",
     "@angular/router": "^4.1.3",
+    "@progress/kendo-angular-buttons": "^1.0.1",
     "@progress/kendo-angular-charts": "*",
     "@progress/kendo-angular-dateinputs": "^1.0.3",
     "@progress/kendo-angular-dialog": "^1.0.1",
