--- a/package.json
+++ b/package.json
@@ -31,11 +31,14 @@
     "@progress/kendo-drawing": "^1.0.3",
     "@progress/kendo-file-saver": "*",
     "@progress/kendo-theme-default": "*",
+    "hammerjs": "*",
     "angular2-busy": "^2.0.4",
     "core-js": "^2.4.1",
     "rxjs": "^5.4.0",
-    "zone.js": "^0.8.11"
-  },
+    "zone.js": "^0.8.11",
+    "systemjs": "*"
+    },
+
   "devDependencies": {
     "@angular/cli": "1.1.0",
     "@angular/compiler-cli": "^4.1.3",
