--- a/package.json
+++ b/package.json
@@ -30,15 +30,16 @@
     "@progress/kendo-data-query": "^1.0.2",
     "@progress/kendo-drawing": "^1.0.3",
     "@progress/kendo-file-saver": "*",
+    "@progress/kendo-theme-bootstrap": "^2.5.1",
     "@progress/kendo-theme-default": "*",
-    "hammerjs": "*",
     "angular2-busy": "^2.0.4",
     "core-js": "^2.4.1",
+    "hammerjs": "*",
+    "open": "0.0.5",
     "rxjs": "^5.4.0",
-    "zone.js": "^0.8.11",
-    "systemjs": "*"
-    },
-
+    "systemjs": "*",
+    "zone.js": "^0.8.11"
+  },
   "devDependencies": {
     "@angular/cli": "1.1.0",
     "@angular/compiler-cli": "^4.1.3",
